# planka-cli

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  planka-cli.spec  pyproject.toml
.github/workflows/: release.yml
docs/: tap-automation.md
scripts/: .env.example  planka_cli.py  pyi_rth_plankapy.py  requirements.txt
tests/: test_cli.py
