[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planka-cli"
version = "0.1.0"
description = "CLI for Planka using plankapy."
requires-python = ">=3.11"
dependencies = [
    "plankapy>=2.2.2",
    "typer",
    "python-dotenv",
    "rich",
]

[project.scripts]
planka-cli = "scripts.planka_cli:app"

[dependency-groups]
dev = [
    "pyinstaller",
]

[tool.setuptools]
packages = ["scripts"]
