[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planka-cli"
version = "0.1.0"
description = "CLI for Planka using plankapy."
requires-python = ">=3.11"
dependencies = [
    "plankapy>=2.2.2",
    "typer",
    "rich",
]

[project.scripts]
planka-cli = "scripts.planka_cli:app"

[dependency-groups]
dev = [
    "pyinstaller",
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = ["scripts"]
